[gd_scene load_steps=2 format=3 uid="uid://de32mbaaspe1p"]

[ext_resource type="Script" path="res://Scripts/UI/end_game_scorer_ui.gd" id="1_ww5ie"]

[node name="EndGameScorerUI" type="PanelContainer"]
offset_right = 232.0
offset_bottom = 171.0
script = ExtResource("1_ww5ie")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score
"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TotalScoreSignLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer6" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="TotalScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeltaSignLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer4" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="DeltaScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer5" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
